# CrabFetch

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs  default-config.toml  new-config.toml  nohup.out  patch.txt
.github/ISSUE_TEMPLATE/: bug_report.md  detection-issue.md  distribution-ascii-.md  feature_request.md  performance-issue.md
.github/workflows/: audit.yml  ci.yml  generate_schema.yml  test.yml
packaging/: .gitignore  package.sh
presets/: basic.toml  default-config.toml  full.toml  neofetch.toml
src/: ascii.rs  ascii_art.rs  battery.rs  colors.rs  config_manager.rs  cpu.rs  desktop.rs  displays.rs  editor.rs  formatter.rs  gpu.rs  host.rs  hostname.rs  initsys.rs  locale.rs  main.rs  memory.rs  module.rs  mounts.rs  music.rs  os.rs  package_managers.rs  packages.rs  preset_configs.rs  proccess_info.rs  segment.rs  shell.rs  swap.rs  syscalls.rs  terminal.rs  uptime.rs  util.rs  versions.rs
src/common_sources/: gtk.rs  mod.rs
src/modules/: battery.rs  cpu.rs  datetime.rs  desktop.rs  displays.rs  editor.rs  gpu.rs  host.rs  hostname.rs  icon_theme.rs  initsys.rs  locale.rs  localip.rs  memory.rs  mod.rs  mounts.rs  music.rs  os.rs  packages.rs  player.rs  processes.rs  shell.rs  swap.rs  terminal.rs  theme.rs  uptime.rs
