[package]
name = "crabfetch"
version = "0.5.3"
authors = ["Livaco"]
edition = "2021"
description = "Extremely fast, featureful and customizable command-line fetcher."
readme = "README.md"
repository = "https://github.com/LivacoNew/CrabFetch"
license = "Apache-2.0"

[features]
player = ["dep:dbus"]
music = ["player"]
android = ["dep:android_system_properties"]
rpm_packages = ["dep:sqlite"]
jsonschema = ["dep:schemars", "dep:serde_json"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
shellexpand = "2.1.0"
colored = "2.1.0"
config = "0.14.0"
serde = "1.0.197"
libc = "0.2.153"
humantime = "2.1.0"
wayland-client = "0.31.3"
x11rb = { version = "0.13.1", features = ["randr"] }
dbus = { version = "0.9.7", optional = true }
chrono = { version = "0.4.38", features = ["alloc", "android-tzdata", "clock", "iana-time-zone", "now", "std"] }
android_system_properties = { version = "0.1.5", optional = true }
sqlite = { version = "0.34.0", optional = true }
which = "6.0.1"
sha2 = "0.10.8"
hex = "0.4.3"
strip-ansi-escapes = "0.2.0"
raw-cpuid = "11.1.0"
schemars = { version = "0.8.21", optional = true }
serde_json = { version = "1.0.128", optional = true }
